ingresses/wso2iot-gateway-ingress.yaml
# Copyright (c) 2019, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wso2iot-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "wso2iot-worker-service,wso2iot-worker-device-service,wso2iot-worker-device-admin-service,wso2iot-worker-configuration-service"
    nginx.org/location-snippets: |
        proxy_set_header proxy-mutual-auth-header $ssl_client_s_dn_legacy;
    nginx.org/rewrites: "serviceName=wso2iot-worker-device-service rewrite=/api/device-mgt/android/v0.9/devices/0.9.0;serviceName=wso2iot-worker-device-admin-service rewrite=/api/device-mgt/android/v0.9/admin/devices/0.9.0;serviceName=wso2iot-worker-configuration-service rewrite=/api/device-mgt/android/v0.9/configuration/0.9.0"
spec:
  tls:
  - hosts:
    - gateway.iot.wso2.com
    secretName: gateway-iots-secret
  rules:
  - host: gateway.iot.wso2.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wso2iot-worker-service
          servicePort: 8243
      - path: /api/device-mgt/android/v1.0/devices
        backend:
          serviceName: wso2iot-worker-device-service
          servicePort: 8243
      - path: /api/device-mgt/android/v1.0/admin/devices
        backend:
          serviceName: wso2iot-worker-device-admin-service
          servicePort: 8243
      - path: /api/device-mgt/android/v1.0/configuration
        backend:
          serviceName: wso2iot-worker-configuration-service
          servicePort: 8243
