ingresses/wso2iot-ingress.yaml
# Copyright (c) 2019, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wso2iot-manager-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "wso2iot-manager-service"
    nginx.org/location-snippets: |
        proxy_set_header proxy-mutual-auth-header $ssl_client_s_dn_legacy;
spec:
  tls:
  - hosts:
    - iot.wso2.com
    secretName: iots-secret
  rules:
  - host: iot.wso2.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wso2iot-manager-service
          servicePort: 9443
